fix z-index menu

--- a/css/main.css
+++ b/css/main.css
@@ -203,7 +203,7 @@ footer h4{
 	backface-visibility: hidden; }
 .homepost figure figcaption::before, .homepost figure figcaption::after {	pointer-events: none; }
 .homepost figure figcaption, .homepost figure figcaption > a { position: absolute; top: 0; left: 0; width: 100%; height: 100%;}
-.homepost figure figcaption > a { z-index: 1000; text-indent: 200%; white-space: nowrap; font-size: 0;	opacity: 0; }
+.homepost figure figcaption > a { z-index: 10; text-indent: 200%; white-space: nowrap; font-size: 0;	opacity: 0; }
 .homepost figure h2 { word-spacing: -0.05em; font-weight: 400;	font-size:19px; }
 .homepost figure h2 span {	font-weight: 800; }
 .homepost figure h2, .homepost figure p {	margin: 0; }
@@ -2347,7 +2347,7 @@ line-height: 15px
     left: 20px;
     transform: scale(0.01) translateZ(0);
     opacity: 0;
-    z-index: 999;
+    z-index: 98;
     transition: transform 175ms ease-in-out,opacity 175ms ease-in-out;
 }
 #notify_fixed.show {
@@ -2490,7 +2490,7 @@ line-height: 15px
     text-align: center;
     line-height: 15px;
     color: #fff;
-    z-index: 999;
+    z-index: 98;
     font-size: 9px;
 }
 
